# zeyzewu

./: Cargo.toml  README.md  test_dict.json
dux/: Cargo.toml
dux/src/: _text.txt  lib.rs  main.rs  text.txt
kyay/: Cargo.toml
kyay/src/: lib.rs  main.rs
wa/: Cargo.toml
wa/src/: lib.rs  main.rs
