[package]
name = "dux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["nannou"]
nannou = ["dep:nannou"]

[dependencies]
wa = { path = "../wa" }

nannou = { version = "0.18.1", optional = true }
itertools = "0.11.0"
